# parse_reddit

./: .gitignore  Makefile  README.md  get_top_authors.py  pyproject.toml  reddit_logger.py
redditparser/: __main__.py  reddit_logger.py  top_authors.py
