[tool.poetry]
name = "redditparser"
version = "0.1.0"
description = ""
authors = ["Vladimir Shatskiy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.1"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
